# Aimedic

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  task description.txt
alembic/: env.py
alembic/versions/: d7dd51788387_initialize_database.py
app/: database.py  main.py  models.py  schemas.py
app/routers/: dicom.py
data/: ID_01213d129.dcm  ID_039bf60bc.dcm  ID_1e36090d4.dcm  ID_1ffd3b776.dcm  ID_21598f9d2.dcm  ID_2f3ef0032.dcm  ID_2f4c7c4fb.dcm  ID_366cc8115.dcm  ID_3bbdaa7d0.dcm  ID_465381b87.dcm  ID_4ab14ebc6.dcm  ID_8afa561f9.dcm  ID_96d28bbf2.dcm  ID_9e66f5fbe.dcm  ID_b925c6d92.dcm  ID_c0d179f8e.dcm  ID_cc384a574.dcm  ID_d111689ea.dcm  ID_d5be3368a.dcm  ID_dd3528349.dcm  ID_f1fe409aa.dcm  ID_f5aec5542.dcm  ID_fbb77555d.dcm  ID_fecc7c017.dcm
