[tool.poetry]
name = "aimedic"
version = "0.1.0"
description = "FastAPI application to store and retrieve metadata from DICOM files"
authors = ["Soroush Moradpour"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
pydicom = "^2.4.3"
python-multipart = "^0.0.6"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"